<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="stRecMan_ListEntry" Id="{685e9c86-a0f2-4dbe-a669-012386636ccf}">
    <Declaration><![CDATA[TYPE stRecMan_ListEntry :
STRUCT
	sFileName:STRING;
	dtCreationTime:DT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>